# autoredocs

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  docs.yml  publish.yml
self_docs/: __init__.html  ai.html  build_report.json  cli.html  config.html  deploy.html  generator.html  index.html  models.html  parser.html  parsers.html  reporter.html  server.html  state.html  watcher.html
self_docs/parsers/: base.html  java.html  python_parser.html  typescript.html
self_docs/serverless/: lambda_handler.html  vercel_handler.html
src/autodocs/: __init__.py  ai.py  cli.py  config.py  deploy.py  generator.py  models.py  parser.py  reporter.py  scaffold.py  server.py  state.py
src/autodocs/parsers/: __init__.py  base.py  cpp.py  csharp.py  go.py  java.py  kotlin.py  python_parser.py  ruby.py  rust.py  typescript.py
src/autodocs/serverless/: lambda_handler.py  vercel_handler.py
src/autodocs/templates/: index.html.j2  index.md.j2  module.html.j2  module.md.j2  page.html.j2  style.css
src/autoredocs/: __init__.py  ai.py  cli.py  config.py  deploy.py  generator.py  parser.py  reporter.py  scaffold.py  server.py  state.py  watcher.py
src/autoredocs/parsers/: __init__.py  base.py  cpp.py  csharp.py  go.py  java.py  kotlin.py  python_parser.py  ruby.py  rust.py  typescript.py
src/autoredocs/serverless/: lambda_handler.py  vercel_handler.py
src/autoredocs/templates/: index.md.j2  module.md.j2  page.html.j2  style.css
tests/: test_cli.py  test_generator.py  test_parser.py  test_phase2.py  test_phase4.py
tests/fixtures/: Calculator.java  bad_syntax.py  sample_module.py  sample_module.ts
